# gemma4-for-education

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: eval.first_run.yaml  eval.yaml  train.first_run.yaml  train.yaml
data/raw/: dataset_template.json  science_adaptations_expanded.json  science_adaptations_seed.json  science_adaptations_targeted_boost.json
docs/: benchmark_appendix.md  cuda_first_run.md  kaggle_benchmark_section_draft.md  kaggle_benchmark_section_polished.md  kaggle_full_writeup_polished.md  kaggle_writeup_outline.md  model_release_checklist.md  qualitative_examples.md  video_script_outline.md
notebooks/: gemma4_for_education_benchmark.ipynb  gemma4_for_education_full_project.ipynb
scripts/: audit_readability_targets.py  benchmark_appendix.py  evaluate.py  first_cuda_run.sh  optimize_first_run.py  prepare_dataset.py  run_demo.py  setup_cuda_env.sh  setup_local_env.sh  summarize_eval.py  train_unsloth.py  validate_dataset.py
src/gemma4_classroom/: __init__.py  config.py  data.py  evaluation.py  output_format.py  prompting.py  readability.py  tuning.py
tests/: test_evaluation.py  test_prompting.py
